cabal-version: 2.2

name:           cui-minecraft-launcher
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/cui-minecraft-launcher#readme>
homepage:       https://github.com/t-sasaki915/cui-minecraft-launcher#readme
bug-reports:    https://github.com/t-sasaki915/cui-minecraft-launcher/issues
author:         TSasaki
maintainer:     netst915@gmail.com
copyright:      2024 TSasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/cui-minecraft-launcher

library
  exposed-modules:
      Crypto.Hash.Sha1.Extra
      Data.JavaRuntime.JavaRuntimeManifest
      Data.Minecraft.AssetIndex
      Data.Minecraft.ClientJson
      Data.Minecraft.VersionManifestV2
      Data.JavaRuntime
      Data.Minecraft
      Network.Curl
      System.OS.Arch
      System.OS.Version
      System.Process.Extra
      System.ProgressBar.Extra
      System.OS
  other-modules:
      Paths_cui_minecraft_launcher
  autogen-modules:
      Paths_cui_minecraft_launcher
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , aeson ==2.1.2.1
    , regex-posix ==0.96.0.1
    , extra ==1.7.14
    , process ==1.6.19.0
    , bytestring ==0.11.5.3
    , time ==1.12.2
    , directory ==1.3.8.4
    , filepath ==1.4.300.1
    , text ==2.0.2
    , transformers ==0.6.1.0
    , terminal-progress-bar ==0.4.2
    , cryptohash-sha1 ==0.11.101.0
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings

executable cui-minecraft-launcher-exe
  main-is: Main.hs
  other-modules:
      Interface.CommandPrompt.Command
      Interface.CommandPrompt
      Internal.AppState
      Internal.CommandLineOption
      Procedure.CommandPrompt.Command.ExitCommand
      Procedure.CommandPrompt.Command.HelpCommand
      Procedure.CommandPrompt.Command.ListVersionCommand
      Procedure.CommandPrompt.Command.QuickLaunchCommand
      Procedure.MinecraftLauncher.JavaRuntimePrepare
      Procedure.MinecraftLauncher.LaunchPrepare
      Procedure.MinecraftLauncher
      Paths_cui_minecraft_launcher
  autogen-modules:
      Paths_cui_minecraft_launcher
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cui-minecraft-launcher
    , optparse-applicative ==0.18.1.0
    , transformers ==0.6.1.0
    , directory ==1.3.8.4
    , filepath ==1.4.300.1
    , bytestring ==0.11.5.3
    , haskeline ==0.8.2.1
    , extra ==1.7.14
    , regex-posix ==0.96.0.1
    , table-layout ==1.0.0.1
    , time ==1.12.2
    , async ==2.2.5
    , terminal-progress-bar ==0.4.2
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings